--- a/capstone1.html
+++ b/capstone1.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> -->
-	<!-- <title>B146</title> -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>B146</title>
+
+	    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
+      rel="stylesheet"
+    />
+
 
 	<!-- Local File Bootstrap -->
 	<link rel="stylesheet" type="text/css" href="./css/css/bootstrap.min.css">
@@ -76,119 +87,129 @@
 				</div>
 			</div>	
 		</div>
+		<svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+      		<path fill="#ffffff" fill-opacity="1" d="M0,128L48,133.3C96,139,192,149,288,133.3C384,117,480,75,576,85.3C672,96,768,160,864,181.3C960,203,1056,181,1152,160C1248,139,1344,117,1392,106.7L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
+      	</svg>
 	</div>
 		<!-- End of Jumbutron -->
 
 		<!-- About Section -->
 		<section id="about" class="aBack-ground">
 			<div class="container">
-			<div class="row py-5 px-md-5">
-				<div class="col-md-12 text-center">
-					<h1 class="aboutH">About</h1>
-				</div>
-				<div class="col-sm-12 col-md-6 col-lg-5">
-					<img src="assets/profile.jpg" class="img-fluid marco-img">
-				</div>
-				<div class="col-sm-12 col-md-6 col-lg-7">
-					<h3 class="text-justify aM">Hello! I'm an Aspiring Full Stack Web Developer / Web Developer Studying MERN Stack (MongoDB, Express, Reactjs, Nodejs), Being a Web Developer is my goal
-            		</h3>
+				<div class="row py-5 px-md-5">
+					<div class="col-md-12 text-center">
+						<h1 class="aboutH">About</h1>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-5 aPadding">
+						<img src="assets/profile.jpg" class="img-fluid marco-img">
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-7 ">
+						<h3 class="text-justify aM">Hello! I'm an Aspiring Full Stack Web Developer / Web Developer Studying 	MERN Stack (MongoDB, Express, Reactjs, Nodejs), Being a Web Developer is my goal
+            			</h3>
+					</div>
 				</div>
 			</div>
-			<div class="work">
-				<div class="row py-5 px-md-5">
-					<div class="col-md-12">
-						<h1>Work Experience</h1>
-					</div>
-				</div>
-				<div class="row py-5 px-md-5">
-					<div class="col-md-4">
-						<h2>Team Web Plus</h2>
-					</div>
-					<div class="col-md-4">
-						<h3>IT-Trainer</h3>
-					</div>
-					<div class="col-md-4">
-						<p>Installing POS System, Importing Files, Network Cabling, Train the client on how the necessary app works</p>
-					</div>
-					<div class="col-md-4">
-						<h2>Hefty Virtual U Solutions</h2>
+		</section>
+		<section class="eAttainment">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,224L21.8,202.7C43.6,181,87,139,131,149.3C174.5,160,218,224,262,256C305.5,288,349,288,393,256C436.4,224,480,160,524,144C567.3,128,611,160,655,170.7C698.2,181,742,171,785,154.7C829.1,139,873,117,916,106.7C960,96,1004,96,1047,96C1090.9,96,1135,96,1178,90.7C1221.8,85,1265,75,1309,64C1352.7,53,1396,43,1418,37.3L1440,32L1440,0L1418.2,0C1396.4,0,1353,0,1309,0C1265.5,0,1222,0,1178,0C1134.5,0,1091,0,1047,0C1003.6,0,960,0,916,0C872.7,0,829,0,785,0C741.8,0,698,0,655,0C610.9,0,567,0,524,0C480,0,436,0,393,0C349.1,0,305,0,262,0C218.2,0,175,0,131,0C87.3,0,44,0,22,0L0,0Z"></pat></svg>
+			<div class="container">
+				<div class="work">
+					<div class="row py-5 px-md-5">
+						<div class="col-md-12 text-center">
+							<h1 class="wExperience">Work Experience</h1>
 						</div>
-					<div class="col-md-4">
-						<h3>Administrative Assistant</h3>
 					</div>
-					<div class="col-md-4">
-						<p>Data Entry, Creating Invoicing, Court-filing, Update daily records, Voic Transcription, Sending reports/updtes to client</p>
+					<div class="row py-5 px-md-5">
+						<div class="col-md-4 wCompany">
+							<h2 class="wCompany">Team Web Plus</h2>
+						</div>
+						<div class="col-md-4">
+							<h3 class="wRole">IT-Trainer</h3>
+						</div>
+						<div class="col-md-4">
+							<p class="wDescription">Installing POS System, Importing Files, Network Cabling, Train the client on how the 	necessary app works</p>
+						</div>
+						<div class="col-md-4">
+							<h2 class="wCompany">Hefty Virtual U Solutions</h2>
+						</div>
+						<div class="col-md-4">
+							<h3 class="wRole">Administrative Assistant</h3>
+						</div>
+						<div class="col-md-4">
+							<p class="wDescription">Data Entry, Creating Invoicing, Court-filing, Updatedaily records, Voic Transcription, 	Sending reportsupdtes to client</p>
+						</div>
+						<div class="col-md-4">
+							<h2 class="wCompany">RPC Contrls & Electrical Services</h2>
+						</div>
+						<div class="col-md-4">
+							<h3 class="wRole">Technical Specialist</h3>
+						</div>
+						<div class="col-md-4">
+							<p class="wDescription">Monitoring Operations, Maintaining Records of Testing,Inspecting Procedures, Maintaining Compliance, Fabricating electrical control panels, Implementing quality standards</p>
+						</div>
 					</div>
-					<div class="col-md-4">
-						<h2>RPC Contrls & Electrical Services</h2>
+				</div>
+				<div class="education">
+					<div class="row py-5 px-md-5">
+						<div class="col-md-12 text-center">
+							<h1>Educational Attainment</h1>
+						</div>
 					</div>
-					<div class="col-md-4">
-						<h3>Technical Specialist</h3>
-					</div>
-					<div class="col-md-4">
-						<p>Monitoring Operations, Maintaining Records of Testing, Inspecting Procedures, Maintaining Compliance, Fabricating electrical control panels, Implementing quality standards</p>
+					<div class="row py-5 px-md-5">
+						<div class="col-md-4">
+							<h2>Primary</h2>
+						</div>
+						<div class="col-md-4">
+							<h3>S.Y: 2001 - 2002</h3>
+						</div>
+						<div class="col-md-4">
+							<p>Kapangian Central School</p>
+						</div>
+						<div class="col-md-4">
+							<h2 class="align-right">-</h2>
+						</div>
+						<div class="col-md-4">
+							<h3>S.Y: 2002 - 2006</h3>
+						</div>
+						<div class="col-md-4">
+							<p>Naungan Elementary School</p>
+						</div>
+						<div class="col-md-4">
+							<h2>Secondary</h2>
+						</div>
+						<div class="col-md-4">
+							<h3>S.Y: 2006 - 20011</h3>
+						</div>
+						<div class="col-md-4">
+							<p>Linao National High School</p>
+						</div>
+						<div class="col-md-4">
+							<h2>Tertiary</h2>
+						</div>
+						<div class="col-md-4">
+							<h3>S.Y: 20011 - 20012</h3>
+						</div>
+						<div class="col-md-4">
+							<p>Western leyte College</p>
+						</div>
+						<div class="col-md-4">
+							<h2>-</h2>
+						</div>
+						<div class="col-md-4">
+							<h3>S.Y: 20012 - 20016</h3>
+						</div>
+						<div class="col-md-4">
+							<p>Eastern Visayas State University</p>
+							<p>*Best Programmer*</p>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="Education">
-				<div class="row py-5 px-md-5">
-					<div class="col-md-12">
-						<h1>Educational Attainment</h1>
-					</div>
-				</div>
-				<div class="row py-5 px-md-5">
-					<div class="col-md-4">
-						<h2>Primary</h2>
-					</div>
-					<div class="col-md-4">
-						<h3>S.Y: 2001 - 2002</h3>
-					</div>
-					<div class="col-md-4">
-						<p>Kapangian Central School</p>
-					</div>
-					<div class="col-md-4">
-						<h2 class="align-right">-</h2>
-					</div>
-					<div class="col-md-4">
-						<h3>S.Y: 2002 - 2006</h3>
-					</div>
-					<div class="col-md-4">
-						<p>Naungan Elementary School</p>
-					</div>
-					<div class="col-md-4">
-						<h2>Secondary</h2>
-					</div>
-					<div class="col-md-4">
-						<h3>S.Y: 2006 - 20011</h3>
-					</div>
-					<div class="col-md-4">
-						<p>Linao National High School</p>
-					</div>
-					<div class="col-md-4">
-						<h2>Tertiary</h2>
-					</div>
-					<div class="col-md-4">
-						<h3>S.Y: 20011 - 20012</h3>
-					</div>
-					<div class="col-md-4">
-						<p>Western leyte College</p>
-					</div>
-					<div class="col-md-4">
-						<h2>-</h2>
-					</div>
-					<div class="col-md-4">
-						<h3>S.Y: 20012 - 20016</h3>
-					</div>
-					<div class="col-md-4">
-						<p>Eastern Visayas State University</p>
-						<p>*Best Programmer*</p>
-					</div>
-				</div>
-			</div>
-			</div>
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,224L21.8,202.7C43.6,181,87,139,131,149.3C174.5,160,218,224,262,256C305.5,288,349,288,393,256C436.4,224,480,160,524,144C567.3,128,611,160,655,170.7C698.2,181,742,171,785,154.7C829.1,139,873,117,916,106.7C960,96,1004,96,1047,96C1090.9,96,1135,96,1178,90.7C1221.8,85,1265,75,1309,64C1352.7,53,1396,43,1418,37.3L1440,32L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"></path></svg>
 		</section>
 
 		<!-- End of About Section -->
+
 		<!-- Project Section -->
 		<section id="projects" class="projects">
 			<div class="container">
@@ -261,7 +282,7 @@
 						</form>
 					</div>
 					<div class="col-md-6">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d405.64664316553774!2d121.01877820734693!3d14.7022412379987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b13b9a2774e7%3A0xdad0e5b7e73f0d10!2s8%20Rosal%20St%2C%20Novaliches%2C%20Quezon%20City%2C%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1637772553859!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+						<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d405.64664316553774!2d121.01877820734693!3d14.7022412379987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b13b9a2774e7%3A0xdad0e5b7e73f0d10!2s8%20Rosal%20St%2C%20Novaliches%2C%20Quezon%20City%2C%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1637772553859!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
 					</div>
 				</div>
 			</div>
@@ -271,7 +292,7 @@
 		<!-- Footer -->
 		<section id="footer" class="footer">
 			<div class="container-fluid">
-				<p>All rights Reserved</p>
+				<p>All rights Reserve</p>
 			</div>
 		</section>
 		<!-- End of Footer -->
