updated my capstone

--- a/capstone1.html
+++ b/capstone1.html
@@ -238,7 +238,7 @@
   						<img src="assets/bubble.png" class="card-img-top img-fluid imgPadding" alt="...">
   						<div class="card-body">
   						  <h3 class="card-title">Capstone 1</h3>
-  						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  						  <h4 class="card-text">Portfolio</h4>
   						  <a href="#" class="btn btn-primary btnProject">Go somewhere</a>
   						</div>
 					</div>
@@ -248,7 +248,7 @@
   						<img src="assets/bubble.png" class="card-img-top img-fluid imgPadding" alt="...">
   						<div class="card-body">
   						  <h3 class="card-title">Capstone 2</h3>
-  						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  						  <h4 class="card-text">Booking System API</h4>
   						  <a href="#" class="btn btn-primary btnProject">Go somewhere</a>
   						</div>
 					</div>
@@ -258,7 +258,7 @@
   						<img src="assets/bubble.png" class="card-img-top img-fluid imgPadding" alt="...">
   						<div class="card-body">
   						  <h3 class="card-title">Capstone 3</h2>
-  						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  						  <h4 class="card-text">Full Stack Application</h4>
   						  <a href="#" class="btn btn-primary btnProject">Go somewhere</a>
   						</div>
 					</div>
@@ -327,7 +327,7 @@
 					<a href="https://github.com/pagulayan09" target="_blank"><i class="fab fa-github iconbtn"></i></a>
 					<a href="https://gitlab.com/pagulayan415" target="_blank"><i class="fab fa-gitlab iconbtn"></i></a>
 				</div>
-				<h1 class="footerA">&copy John Marco Pagulayan, All Rights Reserved.</h1>
+				<h1 class="footerA">&copy John Marco Pagulayan, All Rights Reserved 2021.</h1>
 			</div>
 		</section>
 		<!-- End of Footer -->
@@ -371,7 +371,8 @@
 	</div>
 	<!-- End of Modal -->
 
-		
+		<script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-d483a634-6f09-4d91-9e70-fb1b220bf16d"></div>
 		
 
 	
