Fixed Certificate Section

--- a/capstone1.html
+++ b/capstone1.html
@@ -130,7 +130,7 @@
 						class="img-fluid cerPadding" data-bs-toggle="modal" data-bs-target="#cer1Modal">
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-6 aPadding">
-						<img src="assets/cer1.jpg" class="img-fluid cerPadding" data-bs-toggle="modal" data-bs-target="#cer2Modal">
+						<img src="assets/cer1.JPG" class="img-fluid cerPadding" data-bs-toggle="modal" data-bs-target="#cer2Modal">
 					</div>
 				</div>
 			</div>
@@ -403,7 +403,7 @@
 	<div class="modal-dialog modal-lg modal-dialog-centered">
 	  	<div class="modal-content modalSize text-center">
 	      	<div class="modal-header">
-	      		<img src="assets/cer1.jpg" class="img-fluid ">
+	      		<img src="assets/cer1.JPG" class="img-fluid ">
 	      		</div>
 	    	</div>
 	  	</div>
