updated capstone1.html responsive buttons

--- a/capstone1.html
+++ b/capstone1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>B146</title>
+	<title>MarksFolio</title>
 
 	<!-- Icon -->
 	<link rel="icon" class="hIcon" type="text/css" href="assets/jmp.png">
@@ -72,7 +72,7 @@
   								<h1 class="nMarco">Hello! I'm "John Marco Pagulayan"</h1>
 	  							<p class="lead">an Aspiring Full Stack Developer / Web Developer</p>
 	  							<div class="mt-4 mb-4">
-  									<a class="btn jmbBtn mr-3 text-center" href="#" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact Me</a>
+  									<a class="btn btn-lg jmbBtn mr-3 text-center" href="#" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact Me</a>
   								</div>
   								<div class="icon">
 									<a href="https://www.facebook.com/mharko.pagulayan" target="_blank"><i class="fab fa-facebook iconbtn"></i></a>
@@ -121,12 +121,13 @@
 
 		<section class="certficate">
 			<div class="container">
-				<div class="row py-5 px-md-5">
-					<div class="col-md-12 text-center">
-						<h1 class="Cert">Certificates</h1>
+						<div class="col-md-12 text-center">
+						<h1 class="Cert">Certificate</h1>
 					</div>
+				<div class="row py-5 px-md-5">
+
 					<div class="col-sm-12 col-md-12 col-lg-6 aPadding">
-						<img src="assets/cer2.jpg" class="img-fluid cerPadding"
+						<img src="assets/cer2.JPG" class="img-fluid cerPadding"
 						class="img-fluid cerPadding" data-bs-toggle="modal" data-bs-target="#cer1Modal">
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-6 aPadding">
@@ -298,7 +299,7 @@
 						<h4 class="text-center"><i class="fas fa-envelope cIcon"></i>pagulayan415@gmail.com</h4>
 					</div>
 					<div class="col-lg-6 col-md-12 contactPC">
-						<form>
+						<form class="contactB">
 							<div class="contactP">
 							<h1 class="title text-center"> Send Me a Message</h1>
   							<div class="mb-3">
@@ -319,7 +320,7 @@
     							<textarea class="form-control cInput" id="message" aria-label="With textarea"></textarea>
   							</div>
   							</div>
-  								<button type="submit" class="btn btn-primary btn-contact">Submit</button>
+  								<button type="submit" class="btn btn-contact">Submit</button>
 						</form>
 					</div>
 					<div class="col-lg-6 col-md-12 contactD">
@@ -379,7 +380,7 @@
     							<textarea class="form-control mInput" id="message" aria-label="With textarea" placeholder="Message"></textarea>
   							</div>
   							</div>
-  								<button type="submit" class="btn btn-primary btn-contact">Submit</button>
+  								<button type="submit" class="btn-lg mr-3 btn-contact">Submit</button>
 						</form>
 					</div>
 	      		</div>
@@ -393,7 +394,7 @@
 	  	<div class="modal-dialog modal-lg modal-dialog-centered">
 	    	<div class="modal-content modalSize text-center">
 	    	  	<div class="modal-header">
-	    	  		<img src="assets/cer2.jpg" class="img-fluid ">
+	    	  		<img src="assets/cer2.JPG" class="img-fluid ">
 	      		</div>
 	    	</div>
 	  	</div>
