--- a/capstone1.html
+++ b/capstone1.html
@@ -95,7 +95,7 @@
 				<div class="col-md-12">
 					<div class="jumbotron jumb1 py-md-5 px-md-5">
 						<div class="row jmbSize ">
-							<div class="col-sm-7">
+							<div class="col-lg-7 col-md-12">
   								<h1 class="nMarco">Hello! I'm "John Marco Pagulayan"</h1>
 	  							<p class="lead">an Aspiring Full Stack Developer / Web Developer</p>
 	  							<div class="mt-4 mb-4">
@@ -108,7 +108,7 @@
 									<a href="https://gitlab.com/pagulayan415" target="_blank"><i class="fab fa-gitlab iconbtn"></i></a>
 								</div>
   							</div>
-  							<div class="col-md-5 imgDiv">
+  							<div class="col-md-12 col-lg-5 imgDiv">
   								<img src="assets/profile.jpg" class="img-fluid imgSize">
   							</div>
   						</div>
