Fixed image file

--- a/capstone1.html
+++ b/capstone1.html
@@ -154,7 +154,7 @@
 				<div class="row py-5 px-md-5">
 
 					<div class="col-sm-12 col-md-12 col-lg-6 aPadding">
-						<img src="assets/cer2.JPG" class="img-fluid cerPadding"
+						<img src="assets/cer2.jpg" class="img-fluid cerPadding"
 						class="img-fluid cerPadding" data-bs-toggle="modal" data-bs-target="#cer1Modal">
 					</div>
 					<div class="col-sm-12 col-md-12 col-lg-6 aPadding">
