--- a/capstone1.html
+++ b/capstone1.html
@@ -421,7 +421,7 @@
 	  	<div class="modal-dialog modal-lg modal-dialog-centered">
 	    	<div class="modal-content modalSize text-center">
 	    	  	<div class="modal-header">
-	    	  		<img src="assets/cer2.JPG" class="img-fluid ">
+	    	  		<img src="assets/cer2.jpg" class="img-fluid ">
 	      		</div>
 	    	</div>
 	  	</div>
