added some new features

--- a/capstone1.html
+++ b/capstone1.html
@@ -60,6 +60,12 @@
     </script>
 
 	<div class="back-ground" >
+
+		<!-- Scroll Up Button -->
+		<div class="scroll-up-btn">
+			<i class="fas fa-angle-up"></i>
+		</div>
+		<!-- End of Scroll Up button -->
 		<!-- Navbar Section -->
 		<section class="nav-bar">
 			<nav class="navbar navbar-expand-lg navbar-dark ">
@@ -96,8 +102,9 @@
 					<div class="jumbotron jumb1 py-md-5 px-md-5">
 						<div class="row jmbSize ">
 							<div class="col-lg-7 col-md-12">
-  								<h1 class="nMarco">Hello! I'm "John Marco Pagulayan"</h1>
-	  							<p class="lead">an Aspiring Full Stack Developer / Web Developer</p>
+  								<p class="hello">Hello, my name is</p>
+  								<h1 class="nMarco">John Marco Pagulayan</h1>
+	  							<p class="lead">And I'm a <span>Full Stack Developer / Web Developer</span></p>
 	  							<div class="mt-4 mb-4">
   									<a class="btn btn-lg jmbBtn mr-3 text-center" href="#" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact Me</a>
   								</div>
@@ -133,7 +140,7 @@
 						<img src="assets/marco.jpg" class="img-fluid marco-img">
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-7 ">
-						<h3 class="text-justify aM">Hello! I'm an Aspiring Full Stack Web Developer / Web Developer, Currently Enrolled at Zuitt, Studying 	MERN Stack (MongoDB, Express, Reactjs, Nodejs), Being a Web Developer is my goal. I do love Creating Web Pages / Web App.
+						<h3 class="text-justify aM">Hello! I'm an Aspiring Full Stack Web Developer / Web Developer, Currently Enrolled at Zuitt, Studying 	MERN Stack (MongoDB, Express, Reactjs, Nodejs), Being a Web Developer is my goal. Coding/Programming has always been one of my interests. I've always wanted to pursue a career that ially my passion and I am aiming to secure a job where I could work and do something I love at the same time.
             			</h3>
             			<div class="icon text-center">
 							<a href="https://www.facebook.com/mharko.pagulayan" target="_blank"><i class="fab fa-facebook iconbtn"></i></a>
@@ -143,6 +150,44 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</section>
+
+		<section class="skill">
+			<div class="container">
+				<div class="col-md-12 text-center">
+					<h1 class="Cert">Skill</h1>
+				</div>
+				<div class="row py-5 px-md-5 text-center">
+					<div class="col-lg-4 col-md-6 col-sm-12 sCI">
+						<img src="./assets/html.png" class="sImage">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 sCI">
+						<img src="./assets/css.png" class="sImage">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 sCI">
+						<img src="./assets/js.jpg" class="sImage">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 sCI">
+						<img src="./assets/bootstrap.png" class="sImage">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 sCI">
+						<img src="./assets/php.png" class="sImage">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 sCI">
+						<img src="./assets/mysql.png" class="sImage">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 sCI">
+						<img src="./assets/c.png" class="sImage">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 sCI">
+						<img src="./assets/vb.png" class="sImage">
+					</div>
+					<div class="col-lg-4 col-md-6 col-sm-12 sCI">
+						<img src="./assets/java.png" class="sImage">
+					</div>
+				</div>
+				<hr>	
 			</div>
 		</section>
 
@@ -195,7 +240,7 @@
 							<h3 class="wRole">Administrative Assistant</h3>
 						</div>
 						<div class="col-md-4">
-							<p class="wDescription wPadding"> - Data Entry, Creating Invoicing, Court-filing, Update Daily Records, Voice Transcription, 	Sending Reports, Updates to Client.</p>
+							<p class="wDescription wPadding"> - Data Entry, Creating Invoice, Court-filing, Update Daily Records, Voice Transcription, 	Sending Reports, Updates to Client.</p>
 						</div>
 						<div class="col-md-4">
 							<h2 class="wCompany">RPC Controls & Electrical Services</h2>
@@ -437,6 +482,6 @@
 	  	</div>
 	</div>
 <!-- End of Certificate Modal -->
-	
+<script src="./js/capstone.js"></script>
 </body>
 </html>
