added capstone projects

--- a/capstone1.html
+++ b/capstone1.html
@@ -104,7 +104,7 @@
 							<div class="col-lg-7 col-md-12">
   								<p class="hello">Hello, my name is</p>
   								<h1 class="nMarco">John Marco Pagulayan</h1>
-	  							<p class="lead">And I'm a <span>Full Stack Developer / Web Developer</span></p>
+	  							<p class="lead">And I'm a <span>Full Stack Web Developer / Software Engineer</span></p>
 	  							<div class="mt-4 mb-4">
   									<a class="btn btn-lg jmbBtn mr-3 text-center" href="#" role="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Contact Me</a>
   								</div>
@@ -140,7 +140,7 @@
 						<img src="assets/marco.jpg" class="img-fluid marco-img">
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-7 ">
-						<h3 class="text-justify aM">Hello! I'm an Aspiring Full Stack Web Developer / Web Developer, Currently Enrolled at Zuitt, Studying 	MERN Stack (MongoDB, Express, Reactjs, Nodejs), Being a Web Developer is my goal. Coding/Programming has always been one of my interests. I've always wanted to pursue a career that ially my passion and I am aiming to secure a job where I could work and do something I love at the same time.
+						<h3 class="text-justify aM">Hello! I'm an Aspiring Full Stack Web Developer / Web Developer, Currently Enrolled at Zuitt, Studying 	MERN Stack (MongoDB, Express, Reactjs, Nodejs), Being a Web Developer is my goal. Coding/Programming has always been one of my interests. I've always wanted to pursue a career that is realy my passion and I am aiming to secure a job where I could work and do something I love at the same time.
             			</h3>
             			<div class="icon text-center">
 							<a href="https://www.facebook.com/mharko.pagulayan" target="_blank"><i class="fab fa-facebook iconbtn"></i></a>
@@ -212,7 +212,7 @@
 		<section class="eAttainment">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 				<path fill="#ffffff" fill-opacity="1" d="M0,224L21.8,202.7C43.6,181,87,139,131,149.3C174.5,160,218,224,262,256C305.5,288,349,288,393,256C436.4,224,480,160,524,144C567.3,128,611,160,655,170.7C698.2,181,742,171,785,154.7C829.1,139,873,117,916,106.7C960,96,1004,96,1047,96C1090.9,96,1135,96,1178,90.7C1221.8,85,1265,75,1309,64C1352.7,53,1396,43,1418,37.3L1440,32L1440,0L1418.2,0C1396.4,0,1353,0,1309,0C1265.5,0,1222,0,1178,0C1134.5,0,1091,0,1047,0C1003.6,0,960,0,916,0C872.7,0,829,0,785,0C741.8,0,698,0,655,0C610.9,0,567,0,524,0C480,0,436,0,393,0C349.1,0,305,0,262,0C218.2,0,175,0,131,0C87.3,0,44,0,22,0L0,0Z">
-				</pat>
+				</path>
 			</svg>
 			<div class="container">
 				<div class="work">
@@ -244,7 +244,7 @@
 						</div>
 						<div class="col-md-4">
 							<h2 class="wCompany">RPC Controls & Electrical Services</h2>
-							<p class="wDate">June 12, 2017 - PRESENT</p>
+							<p class="wDate">June 12, 2017 - March 2022</p>
 						</div>
 						<div class="col-md-4">
 							<h3 class="wRole">Technical Specialist</h3>
@@ -263,32 +263,15 @@
 					</div>
 					<div class="row py-5 px-md-5 text-center">
 						<div class="col-md-4">
-							<h2 class="eLevel">Primary</h2>
+							<h2 class="eLevel">Certificate Course</h2>
 						</div>
 						<div class="col-md-4">
-							<h3 class="eSYear">S.Y: 2001 - 2002</h3>
+							<h3 class="eSYear">Nov 2021 - Mar 2022</h3>
 						</div>
 						<div class="col-md-4">
-							<p class="schoolA">Kapangian Central School</p>
+							<p class="schoolA">Zuitt - Coding Bootcamp</p>
 						</div>
-						<div class="col-md-4">
-							<h2 class="align-right eLevel"></h2>
-						</div>
-						<div class="col-md-4">
-							<h3 class="eSYear">S.Y: 2002 - 2006</h3>
-						</div>
-						<div class="col-md-4 ePadding">
-							<p class="schoolA">Naungan Elementary School</p>
-						</div>
-						<div class="col-md-4">
-							<h2 class="eLevel">Secondary</h2>
-						</div>
-						<div class="col-md-4">
-							<h3 class="eSYear">S.Y: 2006 - 2011</h3>
-						</div>
-						<div class="col-md-4 ePadding">
-							<p class="schoolA">Linao National High School</p>
-						</div>
+						
 						<div class="col-md-4">
 							<h2 class="eLevel">Tertiary</h2>
 						</div>
@@ -325,31 +308,34 @@
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 cPPadding">
 					<div class="card">
-  						<img src="assets/bubble.png" class="card-img-top img-fluid imgPadding" alt="...">
+  						<img src="assets/csp.jpg" class="card-img-top img-fluid imgPadding" alt="...">
   						<div class="card-body">
   						  <h3 class="card-title">Capstone 1</h3>
   						  <h4 class="card-text">Portfolio</h4>
-  						  <a href="#" class="btn btn-primary btnProject">Go somewhere</a>
+						  <p class="projectDescription">This is my First Project in Zuitt, It mainly uses HTML, CSS, Bootstrap and JavaScript. I used my knowledge to build these markup languages.</p>
+  						  <a href="https://pagulayan09.github.io/Capstone-1/capstone1.html" class="btn btn-primary btnProject">Go somewhere</a>
   						</div>
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 cPPadding">
 					<div class="card">
-  						<img src="assets/bubble.png" class="card-img-top img-fluid imgPadding" alt="...">
+  						<img src="assets/csp2.jpg" class="card-img-top img-fluid imgPadding" alt="...">
   						<div class="card-body">
   						  <h3 class="card-title">Capstone 2</h3>
-  						  <h4 class="card-text">Booking System API</h4>
-  						  <a href="#" class="btn btn-primary btnProject">Go somewhere</a>
+  						  <h4 class="card-text">Eccomerce API</h4>
+						  <p class="projectDescription">This is a Back-end of an Ecommerce API using MongoDB, Nodejs, Expressjs and Postman</p>
+  						  <a href="https://gitlab.com/pagulayan415/csp-2" class="btn btn-primary btnProject">Go somewhere</a>
   						</div>
 					</div>
 				</div>
 				<div class="col-sm-12 col-md-12 col-lg-12 col-xl-4 cPPadding">
 					<div class="card">
-  						<img src="assets/bubble.png" class="card-img-top img-fluid imgPadding" alt="...">
+  						<img src="assets/csp3.jpg" class="card-img-top img-fluid imgPadding" alt="...">
   						<div class="card-body">
   						  <h3 class="card-title">Capstone 3</h2>
   						  <h4 class="card-text">Full Stack Application</h4>
-  						  <a href="#" class="btn btn-primary btnProject">Go somewhere</a>
+						  <p class="projectDescription">This is a Full Stack Application for an Ecommerce which i used MERN Stack Technology (MongoDB, Expressjs, Reactjs and Nodejs).</p>
+  						  <a href="https://6228b7afd7adb5162d6b2b82--gifted-raman-d2bf6a.netlify.app/cart" class="btn btn-primary btnProject">Go somewhere</a>
   						</div>
 					</div>
 				</div>
@@ -362,7 +348,7 @@
 		<section id="contacts" class="contact">
 			<div class="container">
 				<hr>
-				<div class="row">
+				<div class="row py-5 px-md-5 text-center">
 					<div class="col-md-12 contactP">
 						<h1 class="cTitle text-center">Contact Me</h1>
 						<h4 class="text-center"><i class="fas fa-house-user cIcon"></i>Quezon City, Phiilppines</h4>
