open project in new tab

--- a/capstone1.html
+++ b/capstone1.html
@@ -324,7 +324,7 @@
   						  <h3 class="card-title">Capstone 2</h3>
   						  <h4 class="card-text">Eccomerce API</h4>
 						  <p class="projectDescription">This is a Back-end of an Ecommerce API using MongoDB, Nodejs, Expressjs and Postman</p>
-  						  <a href="https://gitlab.com/pagulayan415/csp-2" class="btn btn-primary btnProject">Go somewhere</a>
+  						  <a href="https://gitlab.com/pagulayan415/csp-2" class="btn btn-primary btnProject" target="_blank">Go somewhere</a>
   						</div>
 					</div>
 				</div>
@@ -335,7 +335,7 @@
   						  <h3 class="card-title">Capstone 3</h2>
   						  <h4 class="card-text">Full Stack Application</h4>
 						  <p class="projectDescription">This is a Full Stack Application for an Ecommerce which i used MERN Stack Technology (MongoDB, Expressjs, Reactjs and Nodejs).</p>
-  						  <a href="https://6228b7afd7adb5162d6b2b82--gifted-raman-d2bf6a.netlify.app/cart" class="btn btn-primary btnProject">Go somewhere</a>
+  						  <a href="https://6228b7afd7adb5162d6b2b82--gifted-raman-d2bf6a.netlify.app" class="btn btn-primary btnProject" target="_blank">Go somewhere</a>
   						</div>
 					</div>
 				</div>
