--- a/capstone1.html
+++ b/capstone1.html
@@ -335,7 +335,7 @@
   						  <h3 class="card-title">Capstone 3</h2>
   						  <h4 class="card-text">Full Stack Application</h4>
 						  <p class="projectDescription">This is a Full Stack Application for an Ecommerce which i used MERN Stack Technology (MongoDB, Expressjs, Reactjs and Nodejs).</p>
-  						  <a href="hhttps://pagulayan-csp3-fe.vercel.app" class="btn btn-primary btnProject" target="_blank">Go somewhere</a>
+  						  <a href="https://pagulayan-csp3-fe.vercel.app" class="btn btn-primary btnProject" target="_blank">Go somewhere</a>
   						</div>
 					</div>
 				</div>
